<resources>
    <string name="app_name">HotOrNot</string>
    <string name="logoText" translatable="false">ヾ(´∀｀○)ﾉ</string>
    <string name="hot" translatable="false">Hot</string>
    <string name="not" translatable="false">Not</string>
    <string name="stan">Stan</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="permission_denied" translatable="false">PERMISSION_DENIED</string>
    <string name="required_permission" translatable="false">Permission required</string>
    <string name="new_sug_found" translatable="false">New suggestion found</string>
    <string name="location_successfully_changed" translatable="false">Successfully changed location</string>
    <string name="location_permission" translatable="false">"Location permission is needed to track your location current location !"</string>
    <string name="successfully_changed_location" translatable="false">Location successfully changed! X(the number of new suggestions) new suggestions found ! Get get them TIGER !" </string>
    <string name="ok" translatable="false">OK</string>
    <string name="done" translatable="false">DONE</string>
    <string name="who_is_hot" translatable="false">Who is hot ?</string>
    <string name="gender_male" translatable="false">Male</string>
    <string name="gender_female" translatable="false">Female</string>
    <string name="gender_other" translatable="false">Other</string>
    <string name="gallery_denied_permission" translatable="false">Who is hot ?</string>
    <string name="close" translatable="false">Close</string>
    <string name="permission_enabled" translatable="false">PERMISSION_ENABLED</string>
    <string name="key" translatable="false">package:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="register">REGISTER</string>
    <string name="other">Other</string>
    <string name="interests">Interests</string>
    <string name="apache_helicopters" translatable="false">Apache Helicopters</string>
    <string name="profile">Profile</string>
    <string name="name">name</string>
    <string name="gps_network_not_enabled" translatable="false">GPS network not enabled</string>
    <string name="profile_screen">Profile</string>
    <string name="log_out">Log out</string>
    <string name="reset">Reset</string>
    <string name="field_is_required">Field is required!</string>
    <string name="email_text">zdr ko pr bepce</string>
    <string name="send_email">send email</string>
    <string name="who_is_n_hot" translatable="false">Who is\n HOT</string>
    <string name="i_am">I AM</string>
    <string name="cancel" translatable="false">cancel</string>
    <string name="cant_run_from_yourself">Cant run from yourself!</string>
    <string name="hor_or_not" translatable="false">HotOrNot</string>
    <string name="georgi">Georgi</string>
    <string name="georgi_email" translatable="false">georgi@gmail.com</string>
    <string name="nikola">Nikola</string>
    <string name="stefan">Stefan</string>
    <string name="petar">Petar</string>
    <string name="invalid_email_address">Invalid Email Address!</string>
    <string name="bulgarian_language" translatable="false">български</string>
    <string name="nikola_email" translatable="false">nikola@gmail.com</string>
    <string name="stefan_email" translatable="false">stefan@gmail.com</string>
    <string name="petar_email" translatable="false">petar@gmail.com</string>
    <string name="stan_email" translatable="false">stan@gmail.com</string>
    <string name="nobody_here_but_us_chickens">Nobody here but us chickens!</string>
    <string name="change_location">CHANGE LOCATION</string>
    <string name="fresh_suggestions">Change your location so that you can be \n supplied with fresh suggestions !</string>
    <string name="lets_go" translatable="false">Let\'s GO !</string>
    <string name="change">change</string>
    <string name="settings">settings</string>
    <string name="permission_permanently_denied">Permission Permanently Denied!</string>
    <string name="current_location">Current location</string>
    <string name="no_internet_connection_check_your_connection_or_try_again">No Internet Connection! Check your connection or try again.</string>
    <string name="oh_no">Oh No</string>
    <string name="swipe_to_refresh">Swipe to refresh</string>
    <string name="no_network">No network!</string>
    <string name="favourite">Favorite</string>
    <string name="main">Main</string>
    <string name="my_favorite_users">Favorite users</string>


    <string-array name="interests">
        <item>Apache Helicopters</item>
        <item>Males</item>
        <item>Females</item>
        <item>Drag Queens</item>
        <item>Furies</item>
    </string-array>

    <string-array name="characteristics_array">
        <item>Techno Lover</item>
        <item>Animal Lover</item>
        <item>Females</item>
        <item>Drag Queens</item>
        <item>Furies</item>
    </string-array>
</resources>